<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="text_appName" translatable="false">TrebleShot</string>
    <string name="text_navigationDrawerOpen">Open navigation drawer</string>
    <string name="text_navigationDrawerClose">Close navigation drawer</string>
    <string name="text_preferences">Preferences</string>
    <string name="mesg_connectionFailure">Connection failed</string>
    <string name="mesg_noNetwork">No connection such as Wi-Fi to find nearby devices</string>
    <string name="mesg_scanningDevices">Finding nearby devices</string>
    <string name="ques_receiveFile">Receive the file?</string>
    <string name="butn_accept">Accept</string>
    <string name="butn_reject">Reject</string>
    <string name="butn_stop">Stop</string>
    <string name="text_sending">Sending</string>
    <string name="butn_cancelSending">Cancel sending</string>
    <string name="text_receiving">Receiving</string>
    <string name="butn_cancelReceiving">Cancel receiving</string>
    <string name="mesg_fileReceived">%s has been received</string>
    <string name="butn_scan">Scan</string>
    <string name="text_listEmpty">No items</string>
    <string name="text_developerMode">Developer Mode</string>
    <string name="text_developerModeSummary">Disables the user configuration</string>
    <string name="text_deviceName">Device Name</string>
    <string name="text_deviceNameSummary">This name will be shown on other devices</string>
    <string name="text_deviceNameTitle">Enter a device name</string>
    <string name="mesg_formatNotSupported">Unsupported format</string>
    <string name="mesg_fileSendError">Could not send file. %s</string>
    <string name="mesg_fileReceiveError">Could not receive %s.</string>
    <string name="text_multipleFileReceiveCompleted">Files received</string>
    <string name="text_deviceList">Devices</string>
    <string name="text_fileOpenAppChoose">Open with</string>
    <string name="text_fileShareAppChoose">Choose an app to share with</string>
    <string name="ques_resetToDefault">Reset to default?</string>
    <string name="text_receivedFiles">Received files</string>
    <string name="butn_edit">Edit</string>
    <string name="butn_share">Share</string>
    <string name="butn_delete">Delete</string>
    <string name="text_deleteConfirm">Confirm deletion</string>
    <string name="butn_cancel">Cancel</string>
    <string name="butn_refresh">Refresh</string>
    <string name="butn_shareTrebleshot">Share This App</string>
    <string name="text_about">About</string>
    <string name="butn_close">Close</string>
    <string name="text_deviceModelInfo">Device Name</string>
    <string name="butn_clearQueue">Clear the queue</string>
    <string name="butn_shareWithTrebleshot">Share with TrebleShot</string>
    <string name="mesg_somethingWentWrong">Something went wrong</string>
    <string name="text_findDevicesHint">No familiar devices</string>
    <string name="text_autoScanDevices">Scan devices automatically</string>
    <string name="text_autoScanDevicesSummary">Scans devices when necessary</string>
    <string name="mesg_stillScanning">Still scanning</string>
    <string name="text_advanced">Advanced</string>
    <string name="text_storagePath">Storage path</string>
    <string name="text_storagePathSummary">New files will be saved to this folder</string>
    <string name="mesg_pathUnavailable">%s currently unavailable</string>
    <string name="text_ipAddress">IP address</string>
    <string name="text_allowToConnect">Allow To Connect</string>
    <string name="text_connectionPermission">Connection permission</string>
    <string name="ques_allowDeviceToConnect">Let this device connect?</string>
    <string name="mesg_stopping">Stopping</string>
    <string name="text_notification">Notification</string>
    <string name="text_useSounds">Sounds</string>
    <string name="text_useSoundsSummary">Use sounds</string>
    <string name="text_useVibration">Vibration and heads-up notifications</string>
    <string name="text_useVibrationSummary">Use vibration and show heads-up notifications</string>
    <string name="text_useLights">Lights</string>
    <string name="text_useLightSummary">Use lights</string>
    <string name="mesg_scanCompleted">Scan completed</string>
    <string name="text_autoStart">Auto-start</string>
    <string name="text_autoStartSummary">Enable communication when a connection is detected</string>
    <string name="text_application">App</string>
    <string name="text_image">Image</string>
    <string name="text_music">Music</string>
    <string name="text_video">Video</string>
    <string name="text_showSystemApps">Show system apps</string>
    <string name="text_showSystemAppsSummary">Show system apps in \"Share\" section</string>
    <string name="butn_showSystemApps">Show system apps</string>
    <string name="mesg_notAllowed">You are not allowed (you may be blocked)</string>
    <string name="mesg_connectionProblem">Connection problem</string>
    <string name="butn_multiSelect">Multi selection</string>
    <string name="butn_receive">Receive</string>
    <string name="text_receive" translatable="false">@string/butn_receive</string>
    <string name="butn_block">Block</string>
    <string name="text_aboutSummary">This software is developed by the Genonbeta Libre Software Org</string>
    <string name="butn_appLaunch">Launch</string>
    <string name="ques_launchApplication">Do you want to launch this app?</string>
    <string name="mesg_launchApplicationError">This app cannot be launched</string>
    <string name="text_enterText">Enter text here…</string>
    <string name="mesg_textCopiedToClipboard">Text copied to clipboard</string>
    <string name="ques_copyToClipboard">Copy to clipboard?</string>
    <string name="text_textReceived">Text received</string>
    <string name="text_receivedTextSummary">Received clipboard text</string>
    <string name="butn_checkForUpdates">Check For Updates</string>
    <string name="butn_seeSourceCode">See source code</string>
    <string name="text_typeText">Write something to send…</string>
    <string name="text_textEditor">Text Editor</string>
    <string name="butn_done">Done</string>
    <string name="text_empty">(empty)</string>
    <string name="text_textStream">Text stream</string>
    <string name="butn_wifiSettings">Wi-Fi</string>
    <string name="text_pendingTransfers">Pending transfers</string>
    <string name="text_stopping">Stopping!</string>
    <string name="text_cancellingTransfer">Canceling job…</string>
    <string name="butn_killNow">Kill now</string>
    <string name="mesg_groupOngoingNotice">Waiting for %s to finish before transferring this file</string>
    <string name="butn_proceed">Proceed</string>
    <string name="ques_removeTransfer">Remove transfer?</string>
    <string name="butn_remove">Remove</string>
    <string name="butn_removeAll">Remove all</string>
    <string name="ques_removeDevice">Remove this device?</string>
    <string name="text_removeDeviceNotice">When you remove a device, its transfers will also be removed</string>
    <string name="text_removeTransferSummary">This will remove %s from the queue</string>
    <string name="ques_removeAll">Remove all?</string>
    <string name="text_removeTransferGroupSummary">This will remove all pending transfers you see here</string>
    <string name="text_availableNetworks">Choose network - %s</string>
    <string name="text_noNetworkAvailable">No network available</string>
    <string name="text_newVersionAvailable">New version available!</string>
    <string name="text_folder">Folder</string>
    <string name="mesg_organizingFiles">Organizing Your Files</string>
    <string name="mesg_communicating">Communicating</string>
    <string name="text_communicationService">Communication Service</string>
    <string name="text_chooserTargetService">Device choice provider</string>
    <string name="text_transactionViewer">View transaction</string>
    <string name="text_error">Error</string>
    <string name="ques_why">Why?</string>
    <string name="text_notAllowedHelp">Check if you are allowed on %1$s \n\nDevices &gt; %2$s &gt; Allow to connect &gt;
        (check it)
    </string>
    <string name="butn_saveTo">Save to</string>
    <string name="mesg_secureExit">Press again to exit</string>
    <string name="butn_create">Create</string>
    <string name="text_createFolder">Create folder</string>
    <string name="mesg_fileAlreadyExists">File already exists</string>
    <string name="mesg_folderCreateError">Folder could not be created</string>
    <string name="text_requestPermissionStorageSummary">This permission allows TrebleShot to read and write to your
        device\'s storage for receiving and sharing files.
    </string>
    <string name="butn_settings">Settings</string>
    <string name="butn_selectThis">Select this</string>
    <string name="butn_newFile">New File</string>
    <string name="mesg_currentPathUnavailable">This folder cannot be used</string>
    <string name="text_defaultFolder">Default Folder</string>
    <string name="text_storage">Storage</string>
    <string name="text_shareFiles">Share Files</string>
    <string name="mesg_pathSaved">The directory has been saved</string>
    <string name="butn_search">Search</string>
    <string name="butn_resume">Resume</string>
    <string name="text_fileExplorer">File Explorer</string>
    <string name="butn_show">Show</string>
    <string name="text_shareTextShort">Text</string>
    <string name="butn_copyToClipboard">Copy To Clipboard</string>
    <string name="butn_showFiles">Show files</string>
    <string name="butn_connect">Connect</string>
    <string name="butn_sortBy">Sort by</string>
    <string name="butn_sortOrder">Sort order</string>
    <string name="text_networkServiceDiscovery">Enable NSD</string>
    <string name="text_networkServiceDiscoverySummary">Network Service Discovery improves discoverability</string>
    <string name="butn_ejectDirectory">Unmount folder</string>
    <string name="butn_rename">Rename</string>
    <string name="butn_copyHere">Copy here</string>
    <string name="butn_gridSize">Grid size</string>
    <string name="butn_addDevices">Add Devices</string>
    <string name="butn_shareWithOtherApps">Share with other apps</string>
    <string name="butn_startHotspot">Set Up Hotspot</string>
    <string name="text_killServiceAfterLeavingSummary">Stops communication if there is no ongoing task</string>
    <string name="text_killServiceAfterLeaving">Leaving the app stops the service</string>
    <string name="butn_open">Open</string>
    <string name="butn_changelog">Changelog</string>
    <string name="text_applyDarkTheme">Dark mode</string>
    <string name="butn_allow">Allow</string>
    <string name="butn_useKnownDevice">Use known devices</string>
    <string name="butn_scanQrCode">Scan QR Code</string>
    <string name="butn_useExistingNetwork">Use existing networks</string>
    <string name="butn_feedbackContact">Feedback &amp; Contact</string>
    <string name="butn_changeSavePath">Change save path</string>
    <string name="text_loadThumbnails">Load Thumbnails</string>
    <string name="text_loadThumbnailsSummary">Show thumbnails for files</string>
    <string name="butn_removeShortcut">Remove Shortcut</string>
    <string name="const_text_useAppFonts">Apply the Recommended Font</string>
    <string name="text_amoledOptimizedBlackTheme">Optimize for AMOLED Screens</string>
    <string name="text_thirdPartyLicenses">Third Party Licenses</string>
    <string name="share">Share</string>
    <string name="selections">Selections</string>
    <string name="share_on_web">Share on Web</string>
    <string name="add_storage_access">Add storage access…</string>
    <string name="clear_storage_list">Clear storage list</string>
    <string name="storage_folder">Storage Folder</string>
    <string name="default_folder">Default Folder</string>
</resources>