<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Veli Tasalı
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory android:title="@string/text_advanced">
        <androidx.preference.CheckBoxPreference
                android:defaultValue="true"
                android:key="load_thumbnails"
                android:summary="@string/text_loadThumbnailsSummary"
                android:title="@string/text_loadThumbnails"/>

        <androidx.preference.CheckBoxPreference
                android:defaultValue="true"
                android:key="kill_service_on_exit"
                android:summary="@string/text_killServiceAfterLeavingSummary"
                android:title="@string/text_killServiceAfterLeaving"/>

        <androidx.preference.CheckBoxPreference
                android:defaultValue="true"
                android:key="nsd_enabled"
                android:summary="@string/text_networkServiceDiscoverySummary"
                android:title="@string/text_networkServiceDiscovery"/>

        <androidx.preference.CheckBoxPreference
                android:defaultValue="false"
                android:key="developer_mode"
                android:summary="@string/text_developerModeSummary"
                android:title="@string/text_developerMode"/>

        <androidx.preference.CheckBoxPreference
                android:defaultValue="false"
                android:key="show_system_apps"
                android:summary="@string/text_showSystemAppsSummary"
                android:title="@string/text_showSystemApps"/>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>