<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_activity_main_device_list"
            android:icon="@drawable/ic_devices_white_24dp"
            android:title="@string/text_deviceList"/>

        <item
            android:id="@+id/menu_activity_main_file_explorer"
            android:icon="@drawable/ic_file_download_white_24dp"
            android:title="@string/text_fileExplorer"/>

        <item
            android:id="@+id/menu_activity_main_ongoing_process"
            android:icon="@drawable/ic_swap_vert_white_24dp"
            android:title="@string/text_pendingTransfers"/>
    </group>

    <item android:title="@string/butn_share">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_activity_main_share_app"
                    android:icon="@drawable/ic_apps_white_24dp"
                    android:title="@string/text_application"/>

                <item
                    android:id="@+id/menu_activity_main_share_music"
                    android:icon="@drawable/ic_library_music_white_24dp"
                    android:title="@string/text_music"/>

                <item
                    android:id="@+id/menu_activity_main_share_video"
                    android:icon="@drawable/ic_video_library_white_24dp"
                    android:title="@string/text_video"/>

                <item
                    android:id="@+id/menu_activity_main_share_text"
                    android:icon="@drawable/ic_textsms_white_24dp"
                    android:title="@string/text_shareTextShort"/>
            </group>
        </menu>
    </item>

    <group android:id="@+id/nav_group_other">
        <item
            android:id="@+id/menu_activity_main_send_application"
            android:icon="@drawable/ic_share_white_24dp"
            android:orderInCategory="10"
            android:title="@string/butn_shareTrebleshot"/>

        <item
            android:id="@+id/menu_activity_main_preferences"
            android:icon="@drawable/ic_settings_white_24dp"
            android:orderInCategory="11"
            android:title="@string/text_preferences"/>

        <item
            android:id="@+id/menu_activity_main_about"
            android:icon="@drawable/ic_info_white_24dp"
            android:orderInCategory="12"
            android:title="@string/text_about"/>

        <item
            android:id="@+id/menu_activity_main_check_for_updates"
            android:icon="@drawable/ic_system_update_white_24dp"
            android:orderInCategory="13"
            android:title="@string/butn_checkForUpdates"/>
    </group>
</menu>