<!--
  ~ Copyright (C) 2019 Veli Tasalı
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_mode_file_open"
        android:title="@string/butn_open"
        android:visible="false"/>

    <item
        android:id="@+id/action_mode_file_show"
        android:title="@string/butn_show"
        android:visible="false"/>

    <item
        android:id="@+id/action_mode_file_eject_directory"
        android:title="@string/butn_ejectDirectory"
        android:visible="false"/>

    <item
        android:id="@+id/action_mode_file_change_save_path"
        android:title="@string/butn_changeSavePath"
        android:visible="false"/>

    <item
        android:id="@+id/action_mode_file_toggle_shortcut"
        android:title="@string/butn_removeShortcut"
        android:visible="false"/>

    <item
        android:id="@+id/action_mode_file_copy_here"
        android:title="@string/butn_copyHere"
        android:visible="false"/>

    <item
        android:id="@+id/action_mode_file_rename"
        android:title="@string/butn_rename"/>

    <item
        android:id="@+id/action_mode_file_delete"
        android:title="@string/butn_delete"/>
</menu>
