<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Veli Tasalı
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/text_notification">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_vibrate"
            android:summary="@string/text_useVibrationSummary"
            android:title="@string/text_useVibration"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_sound"
            android:summary="@string/text_useSoundsSummary"
            android:title="@string/text_useSounds"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_light"
            android:summary="@string/text_useLightSummary"
            android:title="@string/text_useLights"/>

    </PreferenceCategory>
</PreferenceScreen>