<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/set_up_hotspot"
            android:icon="@drawable/ic_wifi_tethering_white_24dp"
            android:title="@string/butn_startHotspot" />

        <item
            android:id="@+id/scan_qr_code"
            android:icon="@drawable/ic_qrcode_scan_white_24dp"
            android:title="@string/butn_scanQrCode" />

        <item
            android:id="@+id/existing_network"
            android:icon="@drawable/ic_wifi_white_24dp"
            android:title="@string/butn_useExistingNetwork" />

        <item
            android:id="@+id/known_device"
            android:icon="@drawable/ic_devices_white_24dp"
            android:title="@string/butn_useKnownDevice" />

    </group>
</menu>