<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actions_transaction_resume"
        android:icon="@drawable/ic_play_arrow_white_24dp"
        android:title="@string/butn_resume"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/actions_transaction_remove"
        android:title="@string/butn_remove"
        android:visible="true" />

    <item
        android:id="@+id/actions_transaction_show_files"
        android:title="@string/butn_showFiles"
        android:visible="false" />

    <item
        android:id="@+id/actions_transaction_retry_all"
        android:title="@string/butn_retry_all"
        android:visible="false"/>


</menu>