<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 Veli Tasalı
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actions_abs_editable_filter"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="80"
        android:title="@string/butn_search"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/actions_abs_editable_multi_select"
        android:icon="@drawable/ic_format_list_checks_white_24dp"
        android:orderInCategory="10"
        android:title="@string/butn_multiSelect" />

    <item
        android:id="@+id/actions_abs_editable_grid_size"
        android:orderInCategory="90"
        android:title="@string/butn_gridSize">
        <menu />
    </item>

    <item
        android:id="@+id/actions_abs_editable_sort_by"
        android:orderInCategory="100"
        android:title="@string/butn_sortBy"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/actions_abs_editable_order_by"
                android:orderInCategory="900"
                android:title="@string/butn_sortOrder">
                <menu />
            </item>
        </menu>
    </item>
</menu>