<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 Veli Tasalı
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actions_about_feedback"
        android:title="@string/butn_feedbackContact" />

    <item
        android:id="@+id/actions_about_changelog"
        android:title="@string/butn_changelog" />

    <item
        android:id="@+id/actions_about_third_party_licenses"
        android:title="@string/text_thirdPartyLicenses" />

    <item
        android:id="@+id/actions_about_check_for_updates"
        android:title="@string/butn_checkForUpdates"
        android:icon="@drawable/ic_system_update_white_24dp"
        app:iconTint="?colorSecondary" />

</menu>