<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Veli Tasalı
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_mode_network_device_toggle_connection"
        android:title="@string/butn_connect"
        android:visible="false"/>

    <item
        android:id="@+id/action_mode_network_device_toggle_access"
        android:title="@string/butn_allow"
        android:visible="false"/>

    <item
        android:id="@+id/action_mode_network_device_remove"
        android:title="@string/butn_remove"
        android:visible="false"/>

</menu>