<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 Veli Tasalı
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/selections"
        android:title="@string/selections"
        android:orderInCategory="1"
        android:enabled="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/shareOnWeb"
        android:title="@string/share_on_web"
        android:icon="@drawable/ic_web_white_24dp"
        android:orderInCategory="2"
        android:enabled="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_round_send_24"
        android:orderInCategory="3"
        android:enabled="false"
        app:showAsAction="always" />

</menu>
